src/styles/efects.css
:root {
  --time-transition: 0.9s;
}

/* INPUT FLOAT LABEL AND FOCUS */
:focus {
  outline: none;
}

.input-container {
  margin: 8px 3% 0 3%;
  height: 56px;
  width: 300px;
  position: relative;
}

.input-container__input {
  letter-spacing: 1px;
  font-size: 16px;
  border: 1px solid #ccc;
  padding: 20px 14px 7px 14px;
  transition: 0.4s;
  background: transparent;
  margin: 0;
  height: 56px;
  width: 300px;
}

.input-container__input ~ .focus-border:before,
.input-container__input ~ .focus-border:after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  width: 0;
  height: 2px;
  background-color: var(--color-primary);
  transition: 0.2s;
  transition-delay: 0.2s;
}
.input-container__input ~ .focus-border:after {
  top: auto;
  bottom: 0;
  right: auto;
  left: 0;
  transition-delay: 0.6s;
}
.input-container__input ~ .focus-border i:before,
.input-container__input ~ .focus-border i:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 2px;
  height: 0;
  background-color: var(--color-primary);
  transition: 0.2s;
}
.input-container__input ~ .focus-border i:after {
  left: auto;
  right: 0;
  top: auto;
  bottom: 0;
  transition-delay: 0.4s;
}
.input-container__input:focus ~ .focus-border:before,
.input-container__input:focus ~ .focus-border:after {
  width: 100%;
  transition: 0.2s;
  transition-delay: 0.6s;
}
.input-container__input:focus ~ .focus-border:after {
  transition-delay: 0.2s;
}
.input-container__input:focus ~ .focus-border i:before,
.input-container__input:focus ~ .focus-border i:after {
  height: 100%;
  transition: 0.2s;
}
.input-container__input:focus ~ .focus-border i:after {
  transition-delay: 0.4s;
}
.input-container__input ~ label {
  position: absolute;
  left: 14px;
  top: 18px;
  color: #aaa;
  transition: 0.3s;
  /* z-index: -1; */
  letter-spacing: 0.5px;
}
.input-container__input:focus ~ label,
.has-content.input-container__input ~ label {
  top: 3px;
  left: 14px;
  font-size: 12px;
  color: var(--color-primary);
  transition: 0.3s;
}

.has-content.input-container__input {
  background-color: var(--color-input-selected-background);
}

/* END INPUT FLOAT LABEL AND FOCUS */

/* TOAST MESSAGE */

.toast {
  display: flex;
  justify-content: center;
  align-items: center;

  position: fixed;
  visibility: hidden;

  top: 85px;
  right: 8%;
  z-index: 999;

  max-width: 400px;
  width: 400px;
  height: 150px;
  padding: 21px 0;
  text-align: left;

  background-color: white;
  border-radius: 8px;
  box-shadow: 1px 7px 14px -5px rgba(0, 0, 0, 0.2);
}

.toast.show {
  visibility: visible;
  animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

.toast:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 4px;
  height: 100%;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.toast__icon {
  display: flex;
  justify-content: center;
  align-items: center;

  position: absolute;
  top: 50%;
  left: 22px;
  transform: translateY(-50%);
  width: 14px;
  height: 14px;
  padding: 7px;
}

.toast__icon > img {
  width: 50px;
  margin-left: 20px;
}

.toast__type {
  color: #3e3e3e;
  font-weight: 700;
  margin-top: 0;
  margin-bottom: 17px;

  font-size: 26px;
}

.toast__message {
  font-size: 21px;
  margin-top: 0;
  margin-bottom: 0;
  color: #878787;
}

.toast__content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100px;

  padding-left: 100px;
  padding-right: 14px;
}

.toast__close {
  position: absolute;
  right: 22px;
  top: 50%;
  width: 14px;
  cursor: pointer;
  height: 14px;
  transform: translateY(-50%);
}

.toast--green:before {
  background-color: var(--color-primary);
}
.toast--blue:before {
  background-color: #1d72f3;
}
.toast--yellow:before {
  background-color: #ffc007;
}
.toast--red:before {
  background-color: var(--color-danger);
}
/* END TOAST MESSAGE */

/* KEY FRAMES */

@keyframes fadein {
  from {
    right: 0;
    opacity: 0;
  }
  to {
    right: 8%;
    opacity: 1;
  }
}

@keyframes fadeout {
  from {
    right: 8%;
    opacity: 1;
  }
  to {
    right: 0;
    opacity: 0;
  }
}

@keyframes fade {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes zoom {
  from {
    transform: scale(0.1);
  }

  to {
    transform: scale(1);
  }
}

.zoom {
  animation: zoom 0.6s;
}

@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }
  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }
  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }
  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }
  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }
  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }
  60% {
    transform: translate(-3px, 1px) rotate(0deg);
  }
  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }
  80% {
    transform: translate(-1px, -1px) rotate(1deg);
  }
  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }
  100% {
    transform: translate(1px, -2px) rotate(-1deg);
  }
}
/* END KEY FRAMES */

